The script now clears existing connections at the very start.

--- a/config/assessment-config.json
+++ b/config/assessment-config.json
@@ -51,5 +51,12 @@
   "Licensing": {
     "InactiveDaysThreshold": 90,
     "MinimumLicenseUtilization": 85
+  },
+  "CISBenchmark": {
+    "Enabled": true,
+    "DisplayInConsole": true,
+    "Version": "3.1.0",
+    "IncludeLevels": [1, 2],
+    "FailOnNonCompliant": false
   }
 }
